syntax = "proto3";

option csharp_namespace = "RapidTime.Api";

import "google/protobuf/empty.proto";

package companyType;

service CompanyType {
  rpc GetCompanyType (GetCompanyTypeRequest) returns (CompanyTypeResponse);
  rpc CreateCompanyType (CreateCompanyTypeRequest) returns (CompanyTypeResponse);
  rpc DeleteCompanyType (DeleteCompanyTypeRequest) returns (google.protobuf.Empty);
  rpc MultiCompanyType (google.protobuf.Empty) returns (MultiCompanyTypeResponse);
}

message MultiCompanyTypeResponse {
  repeated CompanyTypeResponse response= 1;
}

message GetCompanyTypeRequest{
  int32 id = 1;
}

message CompanyTypeResponse{
  int32 id = 1;
  string companyTypeName = 2;
}

message CreateCompanyTypeRequest{
  string companyTypeName = 1;
}

message DeleteCompanyTypeRequest{
  int32 id = 1;
}
